added start screen and play again feature :smiley_cat:

--- a/styles/partials/_colours.scss
+++ b/styles/partials/_colours.scss
@@ -1,7 +1,7 @@
 // Colour variables generated here
 $primaryColour: #070707;
 $secondaryColour: #690500;
-$tertiaryColour: #47682C;
+$tertiaryColour: rgb(68, 112, 32);
 $quaternaryColour: #49270c;
 $quinaryColour: #171A21;
 $accentColour: #FFFFFF;
