--- a/styles/style.css
+++ b/styles/style.css
@@ -351,7 +351,7 @@ header .showInstructionsMenu {
   background: rgba(0, 0, 0, 0.9); }
 
 main .diceGrid {
-  min-height: 360px;
+  min-height: 300px;
   display: -ms-grid;
   display: grid;
   justify-items: center;
@@ -362,14 +362,21 @@ main .diceGrid {
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
   -ms-grid-rows: auto;
   grid-template-rows: auto;
-  grid-gap: 2%;
   overflow: hidden; }
-  @media (max-width: 592px) {
+  @media (max-width: 990px) {
     main .diceGrid {
-      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); } }
-  @media (max-width: 580px) {
+      min-height: 270px; } }
+  @media (max-width: 742px) {
     main .diceGrid {
       min-height: 400px; } }
+  @media (max-width: 592px) {
+    main .diceGrid {
+      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+      grid-gap: 2%;
+      min-height: 280px; } }
+  @media (max-width: 486px) {
+    main .diceGrid {
+      min-height: 360px; } }
 
 main .dice {
   border: 1px solid #070707;
@@ -716,7 +723,7 @@ main .playButtons {
     -ms-grid-column: 7;
     -ms-grid-column-span: 3;
     grid-column: 7 / span 3; }
-    @media (max-width: 1110px) {
+    @media (max-width: 1135px) {
       main .playButtons .stand {
         -ms-grid-column: 7;
         -ms-grid-column-span: 4;
