added animations to the start screen :smiley_cat:

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -13,8 +13,10 @@ ul {
 p {
     font-family: 'Space Mono', monospace;
 }
-ul li {
+li {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 .wrapper {
     max-width: 1280px;
