--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -126,6 +126,8 @@ header {
         left: 0;
         right: 0;
         background: rgba(0,0,0,0.9);
+        animation: fadeInDown;
+        animation-duration: 0.5s;
     }
     
 }
